--- a/.jfrog-pipelines/test.yml
+++ b/.jfrog-pipelines/test.yml
@@ -3,7 +3,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: mygt                       # <-- replace with your integration
-      path: nikhil-oss/jfrog-docker    # <-- replace with your repository name
+      path: nikhil-oss/golden-image    # <-- replace with your repository name
       branches:
         include: master
 
@@ -11,9 +11,8 @@ resources:
     type: PropertyBag
     configuration:
       commitSha: 1
-      runID: 1 
+      runID: 1
 
-      
 pipelines:
   - name: my_first_pipeline
     steps:
@@ -74,4 +73,4 @@ pipelines:
         execution:
           onExecute:
             # Retrieves the commitSha from input resource
-            - echo "CommitSha is $res_myPropertyBag_commitSha"         
+            - echo "CommitSha is $res_myPropertyBag_commitSha"
